[metadata]
name = gpuinfo
version = 0.0.0
author = ChenheGu
long_description = file: Readme.md 
license = MIT
url = https://github.com/coding-famer/GPU_Utils
classifiers = 
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
packages = find: 
install_requires = 
    requests

[options.entry_points]
console_scripts =
    gpuinfo = src.main:main